# movie_api

./: .env_example  .gitignore  Cargo.toml  readme.md
migrations/: 20221102021936_create_users_table.sql  20221102022217_create_remember_token_table.sql  20221103103601_create_movie_table.sql
src/: lib.rs  main.rs
src/app/: environment.rs  error_response.rs  errors.rs  mod.rs  response_payload.rs  server.rs  state.rs
src/app/database/: db.rs  errors.rs  mod.rs  movies.rs  users.rs
src/app/database/entity/: mod.rs  movie.rs  user.rs
src/app/features/: mod.rs
src/app/features/auth/: enity.rs  errors.rs  login_handler.rs  middleware.rs  mod.rs  password_hash.rs  register_handler.rs
src/app/features/image/: errors.rs  image_handler.rs  mod.rs  upload_handler.rs
src/app/features/movie/: create_handler.rs  delete_handler.rs  entity.rs  errors.rs  list_handler.rs  mod.rs  single_handler.rs
src/app/posters/: errors.rs  mod.rs  posters.rs
