[package]
name = "course_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "sqlite", "macros", "migrate", "chrono", "offline", "uuid" ] }
dotenv = "0.15"
envy = "0.4"
rand = "0.8"
rust-argon2 = "1.0"
chrono = "0.4"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
uuid = { version = "1.2", features = ["v4"]}
file-format = "0.7"